<resources>
    <string name="app_name">Ramadan</string>
    <string name="ab">Wednesday ,22 Mars</string>
    <string name="ah">1 Ramadan ,1444</string>
    <string name="prayer_header">Swipe up to see prayer times</string>
    <string name="fajr">Fajr</string>
    <string name="fajr_time">4:41 AM</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="dhuhr_time">12:09 PM</string>
    <string name="asr">Asr</string>
    <string name="asr_time">3:34 PM</string>
    <string name="maghrib">Maghrib</string>
    <string name="maghrib_time">6:09 PM</string>
    <string name="isha">Isha</string>
    <string name="isha_time">7:28 PM</string>
    <string name="prayer_times">Prayer Times</string>
    <string name="ramadan_kareem">Ramadan Kareem</string>
</resources>