<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color"
    app:layoutDescription="@xml/activity_main_scene">

    <TextView
        android:id="@+id/tv_ramadan_date_ab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ab"
        android:textSize="@dimen/text_large"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_ramadan_date_ah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ah"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image_helal"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/helal"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="16dp" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ramadan_image"
        android:layout_width="320dp"
        android:layout_height="320dp"
        app:lottie_rawRes="@raw/helal"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />
    <TextView
        android:id="@+id/tv_swipe_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prayer_header"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"
        android:layout_marginBottom="@dimen/margin_giant"
        app:drawableTopCompat="@drawable/swipe_up" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/prayer_times_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_color"
        app:cardCornerRadius="@dimen/card_radius"
        android:elevation="@dimen/card_elevation"
        android:padding="@dimen/padding_normal"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/prayer_times_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prayer_times"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/margin_normal"
                android:textStyle="bold"
                android:textSize="@dimen/text_large"
                android:textColor="@color/white"
                android:fontFamily="cursive"
                />
            <LinearLayout
                android:id="@+id/fajr_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/prayer_time_shape"
                android:layout_marginVertical="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:padding="@dimen/padding_normal"
                >
                <TextView
                    android:id="@+id/fajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fajr"
                    android:textColor="@color/white"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/fajr_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fajr_time"
                    android:textColor="@color/white"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dhuhr_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/prayer_time_shape"
                android:layout_marginVertical="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:padding="@dimen/padding_normal"
                >
                <TextView
                    android:id="@+id/dhuhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dhuhr"
                    android:textColor="@color/white"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/dhuhr_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dhuhr_time"
                    android:textColor="@color/white"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/asr_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/prayer_time_shape"
                android:layout_marginVertical="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:padding="@dimen/padding_normal"
                >
                <TextView
                    android:id="@+id/asr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asr"
                    android:textColor="@color/white"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/asr_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asr_time"
                    android:textColor="@color/white"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/maghrib_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/prayer_time_shape"
                android:layout_marginVertical="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:padding="@dimen/padding_normal"
                >
                <TextView
                    android:id="@+id/maghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maghrib"
                    android:textColor="@color/white"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/maghrib_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maghrib_time"
                    android:textColor="@color/white"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/isha_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/prayer_time_shape"
                android:layout_marginVertical="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:padding="@dimen/padding_normal"
                >
                <TextView
                    android:id="@+id/isha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isha"
                    android:textColor="@color/white"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/isha_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isha_time"
                    android:textColor="@color/white"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/after_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/ramadan1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />

    <TextView
        android:id="@+id/tv_ramadan_kareem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/ramadan_kareem"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_giant"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="283dp" />


</androidx.constraintlayout.motion.widget.MotionLayout>